fixed spacing

--- a/frontend/src/styles/bodyProduct.css
+++ b/frontend/src/styles/bodyProduct.css
@@ -14,6 +14,10 @@
     justify-content: center;
     background-color: black;
   }
+.product-page-master *{
+    font-family: Popins-Regular;
+}
+
 .product-page{
     background-color: black;
     color:white;
@@ -96,7 +100,7 @@
 }
 .product-page-perks-grid-1 span{
     font-weight: bold;
-    font-size: 3rem;
+    font-size: 2.7rem;
 }
 .product-page-perks-grid-2{
    display: grid;
